--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./src/css/style.css">
   <link rel="icon" href="./src/img/mario.gif">
-  <title>Mario</title>
+  <title>Super Mario</title>
 </head>
 <body>
 
@@ -14,8 +14,8 @@
     <img class="mario" src="./src/img/mario.gif" alt="mario">
     <img class="pipe" src="./src/img/pipe.png" alt="tubo">
     <img class="clouds" src="./src/img/clouds.png" alt="nuvem">
+    <h1 class="start">Aperte Enter para começar a correr</h1>
   </div>
-
 </body>
 <script src="./src/js/main.js"></script>
 </html>
