--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img class="mario" src="./src/img/mario.gif" alt="mario">
     <img class="pipe" src="./src/img/pipe.png" alt="tubo">
     <img class="clouds" src="./src/img/clouds.png" alt="nuvem">
-    <h1 class="start">Aperte Enter para começar a correr</h1>
+    <button class="start" onclick="startGame()">Iniciar a corrida</button>
   </div>
 </body>
 <script src="./src/js/main.js"></script>
