restart game :tada:

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <img class="clouds" src="./src/img/clouds.png" alt="nuvem">
     <button class="start" onclick="startGame()">Iniciar a corrida</button>
   </div>
+
+  <div class="game-over"><h1>Game Over :(</h1><button onclick="restartGame()">Reiniciar</button></div>
 </body>
 <script src="./src/js/main.js"></script>
 </html>
